{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 226,
  "lineage": "8c6a3477-4f92-02b4-db98-cb7b231d2366",
  "resources": [
    {
      "module": "module.network-resources",
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05688c04984023447",
            "arn": "arn:aws:ec2:us-west-2:156884456760:elastic-ip/eipalloc-05688c04984023447",
            "domain": "vpc",
            "id": "eipalloc-05688c04984023447",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-230-179-107.us-west-2.compute.amazonaws.com",
            "public_ip": "44.230.179.107",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network-resources",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:156884456760:internet-gateway/igw-0a34317e89b95c66f",
            "id": "igw-0a34317e89b95c66f",
            "owner_id": "156884456760",
            "tags": {
              "Name": "TF-internet-gateway"
            },
            "tags_all": {
              "Name": "TF-internet-gateway"
            },
            "vpc_id": "vpc-0ff1dd07f0720ad58"
          },
          "dependencies": [
            "module.network-resources.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network-resources",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "TF_internet-access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05688c04984023447",
            "association_id": "eipassoc-0d36d7fbdbb141230",
            "connectivity_type": "public",
            "id": "nat-03e78f8e86ba5f753",
            "network_interface_id": "eni-06a37c99fb7a96434",
            "private_ip": "10.0.1.92",
            "public_ip": "44.230.179.107",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07d810fffad473c79",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "module.network-resources.aws_eip.lb",
            "module.network-resources.aws_internet_gateway.gw",
            "module.network-resources.aws_subnet.public_subnets",
            "module.network-resources.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network-resources",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_tb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:156884456760:route-table/rtb-0e55acffb7854364f",
            "id": "rtb-0e55acffb7854364f",
            "owner_id": "156884456760",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a34317e89b95c66f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table"
            },
            "tags_all": {
              "Name": "Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff1dd07f0720ad58"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network-resources.aws_internet_gateway.gw",
            "module.network-resources.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network-resources",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_tb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:156884456760:route-table/rtb-0cda5ab438ffd1f1e",
            "id": "rtb-0cda5ab438ffd1f1e",
            "owner_id": "156884456760",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a34317e89b95c66f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff1dd07f0720ad58"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network-resources.aws_internet_gateway.gw",
            "module.network-resources.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network-resources",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0a2d809a6a47109",
            "route_table_id": "rtb-0e55acffb7854364f",
            "subnet_id": "subnet-052d2f1cc1e6fa158"
          },
          "dependencies": [
            "module.network-resources.aws_internet_gateway.gw",
            "module.network-resources.aws_route_table.private_tb",
            "module.network-resources.aws_subnet.private_subnets",
            "module.network-resources.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07342817120093302",
            "route_table_id": "rtb-0e55acffb7854364f",
            "subnet_id": "subnet-0527662af3ff96731"
          },
          "dependencies": [
            "module.network-resources.aws_internet_gateway.gw",
            "module.network-resources.aws_route_table.private_tb",
            "module.network-resources.aws_subnet.private_subnets",
            "module.network-resources.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02455214b2ed294bc",
            "route_table_id": "rtb-0e55acffb7854364f",
            "subnet_id": "subnet-0ef71c2718c3bf6ec"
          },
          "dependencies": [
            "module.network-resources.aws_internet_gateway.gw",
            "module.network-resources.aws_route_table.private_tb",
            "module.network-resources.aws_subnet.private_subnets",
            "module.network-resources.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de6693ecffbbef89",
            "route_table_id": "rtb-0e55acffb7854364f",
            "subnet_id": "subnet-0c158d80a2d29c0a6"
          },
          "dependencies": [
            "module.network-resources.aws_internet_gateway.gw",
            "module.network-resources.aws_route_table.private_tb",
            "module.network-resources.aws_subnet.private_subnets",
            "module.network-resources.aws_vpc.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017adf26d52c9efad",
            "route_table_id": "rtb-0e55acffb7854364f",
            "subnet_id": "subnet-0cd060533c8aff264"
          },
          "dependencies": [
            "module.network-resources.aws_internet_gateway.gw",
            "module.network-resources.aws_route_table.private_tb",
            "module.network-resources.aws_subnet.private_subnets",
            "module.network-resources.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network-resources",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1bf99deccb1054e",
            "route_table_id": "rtb-0cda5ab438ffd1f1e",
            "subnet_id": "subnet-07d810fffad473c79"
          },
          "dependencies": [
            "module.network-resources.aws_internet_gateway.gw",
            "module.network-resources.aws_route_table.public_tb",
            "module.network-resources.aws_subnet.public_subnets",
            "module.network-resources.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5b4b64a76073b2b",
            "route_table_id": "rtb-0cda5ab438ffd1f1e",
            "subnet_id": "subnet-0215d3281cdf0adc0"
          },
          "dependencies": [
            "module.network-resources.aws_internet_gateway.gw",
            "module.network-resources.aws_route_table.public_tb",
            "module.network-resources.aws_subnet.public_subnets",
            "module.network-resources.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network-resources",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:156884456760:subnet/subnet-052d2f1cc1e6fa158",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052d2f1cc1e6fa158",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "156884456760",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 1"
            },
            "tags_all": {
              "Name": "Private Subnet 1"
            },
            "vpc_id": "vpc-0ff1dd07f0720ad58"
          },
          "dependencies": [
            "module.network-resources.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:156884456760:subnet/subnet-0527662af3ff96731",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0527662af3ff96731",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "156884456760",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 2"
            },
            "tags_all": {
              "Name": "Private Subnet 2"
            },
            "vpc_id": "vpc-0ff1dd07f0720ad58"
          },
          "dependencies": [
            "module.network-resources.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:156884456760:subnet/subnet-0ef71c2718c3bf6ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef71c2718c3bf6ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "156884456760",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 3"
            },
            "tags_all": {
              "Name": "Private Subnet 3"
            },
            "vpc_id": "vpc-0ff1dd07f0720ad58"
          },
          "dependencies": [
            "module.network-resources.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:156884456760:subnet/subnet-0c158d80a2d29c0a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c158d80a2d29c0a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "156884456760",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 4"
            },
            "tags_all": {
              "Name": "Private Subnet 4"
            },
            "vpc_id": "vpc-0ff1dd07f0720ad58"
          },
          "dependencies": [
            "module.network-resources.aws_vpc.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:156884456760:subnet/subnet-0cd060533c8aff264",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd060533c8aff264",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "156884456760",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 5"
            },
            "tags_all": {
              "Name": "Private Subnet 5"
            },
            "vpc_id": "vpc-0ff1dd07f0720ad58"
          },
          "dependencies": [
            "module.network-resources.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network-resources",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:156884456760:subnet/subnet-07d810fffad473c79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d810fffad473c79",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "156884456760",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 1"
            },
            "tags_all": {
              "Name": "Public Subnet 1"
            },
            "vpc_id": "vpc-0ff1dd07f0720ad58"
          },
          "dependencies": [
            "module.network-resources.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:156884456760:subnet/subnet-0215d3281cdf0adc0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0215d3281cdf0adc0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "156884456760",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 2"
            },
            "tags_all": {
              "Name": "Public Subnet 2"
            },
            "vpc_id": "vpc-0ff1dd07f0720ad58"
          },
          "dependencies": [
            "module.network-resources.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network-resources",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:156884456760:vpc/vpc-0ff1dd07f0720ad58",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04f30aa099295ada2",
            "default_route_table_id": "rtb-0487df96baf3fd353",
            "default_security_group_id": "sg-079f585342ce845cf",
            "dhcp_options_id": "dopt-0ccfdaca85a888daa",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ff1dd07f0720ad58",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0487df96baf3fd353",
            "owner_id": "156884456760",
            "tags": {
              "Name": "TF-waitonline"
            },
            "tags_all": {
              "Name": "TF-waitonline"
            }
          }
        }
      ]
    }
  ]
}